Fix the CSS for the horizontal scroll bar in the Overview section and for the general behaviour. Fixes #55.

--- a/css/analysis.scss
+++ b/css/analysis.scss
@@ -229,7 +229,7 @@ body{
   position: relative;
   width: 1000px;
   background-color: white;
-  height: calc(100% - 10em);
+//  height: calc(100% - 10em);
 }
 
 .container-tile{
